--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,32 +1,133 @@
-:root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
 body {
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
   margin: 0;
+  background-color: #f0f0f0;
 }
 
-main {
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   flex-grow: 1;
 }
-main:has(.back-link) {
+
+h1 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #333;
   text-align: center;
+}
+
+.button-container {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.button {
+  padding: 15px 30px;
+  background-color: red;
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.button:hover {
+  background-color: darkred;
+}
+
+.link-container {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.link {
+  color: red;
+  text-decoration: underline;
+  font-size: 16px;
+}
+
+.link:hover {
+  color: darkred;
+}
+
+/* gallery style */
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  list-style: none;
+  padding: 24px 156px;
+  margin: 0;
+  justify-content: center;
+}
+
+.gallery-item {
+  flex: 0 1 calc(33.33% - 24px);
+  box-sizing: border-box;
+  overflow: hidden;
+
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery-item:hover {
+  transform: scale(1.04);
+}
+
+.gallery-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* Form styles */
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+input,
+textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  width: 300px;
+}
+
+input:focus,
+textarea:focus {
+  border-color: red;
+  outline: none;
+}
+
+button[type='submit'] {
+  padding: 10px 20px;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button[type='submit']:hover {
+  background-color: darkred;
+}
+
+footer {
+  text-align: center;
+  font-size: 12px;
+  color: #666;
+  padding: 10px 0;
 }
