--- a/src/css/base.css
+++ b/src/css/base.css
@@ -90,39 +90,78 @@ h1 {
 }
 
 /* Form styles */
-form {
+.feedback-form {
+  width: 408px;
+  padding: 24px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.feedback-cont {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  margin-bottom: 16px;
 }
 
-input,
-textarea {
-  padding: 10px;
+.feedback-form label {
+  margin-bottom: 8px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.feedback-form input,
+.feedback-form textarea {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding: 8px 16px;
+  margin-bottom: 8px;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  width: 300px;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
-input:focus,
-textarea:focus {
-  border-color: red;
+.feedback-form input:hover,
+.feedback-form textarea:hover {
+  border: 1.3px solid #121111;
+}
+
+.feedback-form input:focus,
+.feedback-form textarea:focus {
   outline: none;
+  box-shadow: none;
+  border: 1px solid #ccc;
 }
 
-button[type='submit'] {
-  padding: 10px 20px;
-  background-color: red;
-  color: white;
+.feedback-form textarea {
+  height: 80px;
+  resize: none;
+}
+
+.feedback-form button {
+  padding: 8px 16px;
+  background-color: #4e75ff;
   border: none;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 8px;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  transition: background-color 0.3s ease;
 }
 
-button[type='submit']:hover {
-  background-color: darkred;
+.feedback-form button:hover {
+  background-color: #6c8cff;
 }
 
 footer {
