--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,7 +29,7 @@ h1 {
 
 .tasks {
   display: block;
-  margin-bottom: 10px;
+  margin: 15px 0 10px 0;
   padding: 10px;
   background-color: #b98d12;
   color: white;
@@ -140,4 +140,23 @@ h1 {
 
 .feedback-form button:hover {
   background-color: #6c8cff;
+}
+
+footer {
+  text-align: center;
+  font-size: 12px;
+  color: #666;
+  padding: 10px 0;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.footer-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer-link:hover {
+  text-decoration: underline;
 }
